2012-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: RETURN_TRUE

	* gi.h (RETURN_TRUE): New macro.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.44 (tag v0.44)

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Correctly handle ‘async?’ to ‘pg-get-copy-data’.

	* libpq.c (pg_get_copy_data): Use ‘TRUE_ENOUGH’ for ‘asyncp’.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: TRUE_ENOUGH

	* libpq.c (TRUE_ENOUGH): New macro.
	(pg_getlineasync, pg_notifies): Use ‘TRUE_ENOUGH’.

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.43 (tag v0.43)

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[col-defs] Relax column name lexical rules to disallow whitespace only.

	* postgres-col-defs.scm (validate-def):
	Don't check for ‘char-alphabetic?’, ‘char-numeric?’ or ‘#\_’;
	instead, check only that the character is not whitespace.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘string-xrep’ more.

	* postgres-qcons.scm (idquote from): New proc.
	(idquote xsub): Likewise.
	(idquote): Use ‘from’, ‘xsub’, ‘string-xrep’.
	(make-SELECT/COLS-tree): Use ‘string-xrep’.
	* postgres-table.scm: Import ‘string-xrep’.
	(pgtable-manager symbol->qstring): Use ‘string-xrep’.
	(pgtable-manager): Likewise.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: string-xrep

	* postgres-qcons.scm: Import SRFI 13 ‘string-prefix?’; import SRFI 14
	‘char-set:full’, ‘char-set-filter’, ‘char-set-size’, ‘char-set-union’,
	‘char-set-for-each’, ‘ucs-range->char-set’.
	(string external representation): New titled comment block.
	(string-xrep): New proc, exported.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Fix bug: Make ‘sql-quote’ do backslash octal substitution.

	* postgres-qcons.scm: Import some SRFI 13 procs.
	(sql-quote): Rename arg to ‘string’; prior to ‘E’ processing,
	replace all ‘#\\’ with the string ‘x#\\’, ‘#\1’, ‘#\3’, ‘#\4’.