@@ -1,3 +1,11 @@
+2012-12-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Avoid overlarge ‘char-set:full’.
+
+	* postgres-qcons.scm: Import SRFI 14 ‘ucs-range->char-set’.
+	(string-xrep): If ‘char-set:full’ has more than 256 elements.
+	construct and use the charset [0,255], in its place.
+
 2012-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[pq int] Add abstraction: RETURN_TRUE
